deploy/statefulset.yaml
# Cluster setup: https://github.com/processone/docker-ejabberd/issues/64
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ejabberd
spec:
  selector:
    matchLabels:
      app: ejabberd
  serviceName: ejabberd-headless
  replicas: 2
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: ejabberd
    spec:
      serviceAccountName: ejabberd
      # subdomain: ejabberd-headless
      # setHostnameAsFQDN: true
      containers:
      - name: ejabberd
        image: ghcr.io/lykos153/ejabberd-cluster-k8s:v22.05-2
        imagePullPolicy: Always
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /ready-probe.sh
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
        resources: {}
        ports:
        - containerPort: 5222
          name: xmpp-c2s
        - containerPort: 5269
          name: xmpp-s2s
        - containerPort: 5280
          name: http
        - containerPort: 5443
          name: https
        - containerPort: 4369
          name: epmd
        - containerPort: 4370
          name: cluster
        volumeMounts:
          - name: config
            mountPath: /config
          - name: tls
            mountPath: /opt/ejabberd/tls
      volumes:
        - name: config
          configMap:
            name: ejabberd
        - name: tls
          secret:
            secretName: ejabberd-tls-prod
